@@ -2,6 +2,8 @@ Version V5.9 R7.9
 
 16/12/20 /MK Change - MainUnit - Show Parlour Link and Ration Calc icons but give "acquire this facility" error if the module is not installed i.e. not purchased.
                     - uDanRyanImport - FilterGridTable - Default the ActivePageIndex to Pregnant as this event should always exist.
+21/12/20 /MK Change - MenuUnit - DoFilter - If the filter is Bulls In Use and some bulls don't have breeds, show information message and sort by breed code.
+                               - ClearAnimalSelection - If the sort was changed by the filter of Bulls In Use then set sort back to original sorted column.
 
 Version V5.9 R7.8
 
